# mlops_proj_cat_dog

./: .gitignore  README.md  get_dataset.py  infer.py  main.py  model_NN.py  predict.py  pyproject.toml  train.py
.dvc/: config
code/: get_dataset.py  main.py  model_NN.py  predict.py  train.py
configs/: config.yaml
