[tool.poetry]
name = "mlops-proj-cat-dog"
version = "0.1.0"
description = ""
authors = ["BedPled <vishniakov.ae@students.dvfu.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.26.3"
scikit-learn = "^1.3.2"
scikit-image = "^0.22.0"
mlflow = "^2.9.2"
pandas = "^2.1.4"
hydra-core = "^1.3.2"
dvc = "^3.38.1"
tensorflow-io-gcs-filesystem = "~0.31.0"
tensorflow = "~2.15.0"
keras = "~2.15.0"
tensorflow-estimator = "~2.15.0"
tensorflow-intel = "~2.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
